tests/invalidTest/other/const_to_small.q
# EXPECT invalid number because it is too big or too small
def void errorDef(){
    sint128 a = -1701411834604692317316873037158841057290
}